manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-auth-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-auth
  template:
    metadata:
      labels:
        app: fastapi-auth
    spec:
      hostNetwork: true
      containers:
        - name: auth-image
          image: evgenija1/auth-image:f7b07a1c0a11418db0f690547c1e1ecab42d4b19
          imagePullPolicy: Always
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
