manifests/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        
    spec:
      containers:
        - name: mongodb
          image: mongo
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 27017
          volumeMounts: 
          - name: mongodb-vol
            mountPath: /docker-entrypoint-initdb.d
          - name: mongodb-pv-claim
            mountPath: /data/db/
      
      volumes:
        - name: mongodb-vol
        - name: mongodb-pv-claim
          persistentVolumeClaim:
            claimName: mongodb-pv-claim
