manifests/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        
    spec:
      containers:
        - name: postgres
          image: postgres:10.0
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 5432
          volumeMounts: 
          - name: postgres-vol
            mountPath: /docker-entrypoint-initdb.d
          - name: postgres-pv-claim
            mountPath: /var/lib/postgresql/data
      
      volumes:
        - name: postgres-vol
          configMap: 
            name: postgres-configmap
        - name: postgres-pv-claim
          persistentVolumeClaim:
            claimName: postgres-pv-claim
