manifests/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-auth-lb
spec:
  selector:
    app: fastapi-auth
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
