manifests/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-products-lb
spec:
  selector:
    app: flask-products
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
